<resources>
    <string name="app_name">Cara o Cruz</string>

    <string name="btn_tirar">Tirar</string>
    <string name="btn_parar">Parar</string>
    <string name="btn_cerrar">Cerrar</string>
    <string name="tv_cara">Cara</string>
    <string name="tv_cruz">Cruz</string>
    <string name="tv_vacio">...</string>
    <string name="tv_texto2">Incline a la derecha para tirar la moneda</string>
    <string name="tv_texto1">Incline a la izquierda para parar</string>

    <string name="tv_agitar">Agitar para tirar</string>
    <string name="tv_partida">Cantidad de partidas</string>
    <string name="tv_sonido">Reproducir sonido</string>
    <string name="tv_info">Info de la app</string>

    <string name="txt_menu">Menu</string>
    <string name="tv_ganador">Ganador!</string>

    <string name="txt_content_description_1">Spinner</string>
    <string name="txt_content_description_2">ImageView moneda</string>
    <string name="txt_content_description_3">ImageView puntiacion 1</string>
    <string name="txt_content_description_4">ImageView puntiacion 2</string>
    <string name="txt_content_description_5">ImageView puntiacion 3</string>
    <string name="txt_content_description_6">ImageView puntiacion 4</string>
    <string name="txt_content_description_7">ImageView puntiacion 5</string>
    <string name="txt_content_description_8">ImageView puntiacion 6</string>

    <string name="btn_ok">Aceptar</string>

    <string name="txt_toast_1">Finalice esta partida</string>
    <string name="txt_vercion">Versión 1.0</string>

    <string name="txt_acerca_de">El clásico juego de cara o cruz ahora en tu smartphone para que juegues con tus amigos</string>
</resources>