<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/tv_partida"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_person"
            app:drawableStartCompat="@drawable/ic_person"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_content_description_1"
            android:foregroundGravity="right"
            android:minHeight="32dp"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_sonido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sonido"
        android:drawableLeft="@drawable/ic_sonido"
        android:minHeight="48dp"
        android:text="@string/tv_sonido"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:text="@string/tv_info"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_info"
        app:drawableStartCompat="@drawable/ic_info"
        tools:ignore="TextContrastCheck" />


</LinearLayout>