<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="300dp"
    android:backgroundTint="@color/purple_200"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ganador"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cruz" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_cruz"
            android:textColor="@color/gris"
            android:textSize="30sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_ok2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_ok"
            android:textColor="@color/purple_700"
            app:cornerRadius="20dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>


    </LinearLayout>




</androidx.cardview.widget.CardView>